fix padding issues for all pages on mobile site

--- a/app/assets/stylesheets/base.css.less
+++ b/app/assets/stylesheets/base.css.less
@@ -7,11 +7,7 @@
 }
 
 body {
-	width: 100%;
-	height: 100%;
   background:image-url('text-transparent-bg.png') repeat scroll 0 0 transparent;
-	margin: 0;
-	padding: 0;
 	color: #000; 
 }
 
